--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -40,7 +40,7 @@
                     <h1>La palette du gout</h1>
                 </span>
                 <span class="R1-menu-carte-title-heart">
-                    <i class="far fa-heart"></i>
+                    <i class="far fa-heart"></i><i class="fas fa-heart"></i>
                 </span>
             </div>
             <div class="R1-menu-carte-choix">
