--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,7 @@
         
    </div>
 </div>
-
-    </div>
-    <header class="header">
+     <header class="header">
         <div class="header_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_logo_pict"></a></div>
     </header>
     <section class="section_1">
@@ -41,7 +39,7 @@
         <div class="section_1_2">
             <div class="section_1_2_title"><h2>Réservez le menu qui vous convient</h2></div>
             <div class="section_1_2_subtitle"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p></div>
-            <div class="section_1_2_button"><button class="section_1_2_button_b">Explorer nos restaurants</button></div>   
+            <div class="section_1_2_button"><a href="#ancre"><button class="section_1_2_button_b">Explorer nos restaurants</button></a></div>   
         </div>
     </section>
     <section class="section_2">
@@ -52,7 +50,7 @@
             <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">3</span> <span class="section_2_2_card_s_icon2"><i class="fas fa-store"></i></span><span class="section_2_2_card_s_text"><p>Dégustez au restaurant</p></span></div></div>
         </div>
     </section>
-    <section class="section_3">
+    <section class="section_3" id="ancre">
         <div class="section_3_1"><span class="section_3_1_title"><h2>Restaurants</h2></span></div>
         <div class="section_3_2">
             <div class="section_3_2_cards">
@@ -93,7 +91,7 @@
                                 <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
                                     <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>Le délice des sens</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Folie-Méricourt</p></span></div>
-                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></i><i class="fas fa-heart"></i></div>
+                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                                 </div>
                             </div>
             </div>
@@ -105,7 +103,7 @@
                                 <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
                                 <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
                                 <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
-                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
+                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>Contact</p></a></span></li>
 
         </ul></div>
     </footer>
