--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -39,9 +39,9 @@
                 <span class="R1-menu-carte-title-text">
                     <h1>La palette du gout</h1>
                 </span>
-                <span class="R1-menu-carte-title-heart">
+                <div class="heart_anim"><span class="R1-menu-carte-title-heart">
                     <i class="far fa-heart"></i><i class="fas fa-heart"></i>
-                </span>
+                </span></div>
             </div>
             <div class="R1-menu-carte-choix">
                 <div class="R1-menu-carte-choix-entrees">
