--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -39,9 +39,9 @@
                 <span class="R1-menu-carte-title-text">
                     <h1>Le délice des sens</h1>
                 </span>
-                <span class="R1-menu-carte-title-heart">
-                    <i class="far fa-heart"></i>
-                </span>
+                <div class="heart_anim"><span class="R1-menu-carte-title-heart">
+                    <i class="far fa-heart"></i><i class="fas fa-heart"></i>
+                </span></div>
             </div>
             <div class="R1-menu-carte-choix">
                 <div class="R1-menu-carte-choix-entrees">
