--- a/Index.html
+++ b/Index.html
@@ -64,9 +64,9 @@
       <div class="section_1_1">
         <div class="section_1_1_map">
           <i class="fas fa-map-marker-alt"></i>
-          <form action="/action_page.php" method="GET">
-            <label for=""></label>
-            <input type="text" name="location" value="Paris, Belleville" />
+          <form action="/action_page.php" method="GET" >
+            <label for="location"></label>
+            <input type="text" name="location" value="Paris, Belleville" id="location" />
           </form>
         </div>
       </div>
