--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -46,11 +46,11 @@
     </header>
     <section class="R1-menu">
       <header class="R1-menu-header">
-        <img
+        <h2><img
           src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
           alt="restaurant Picture"
           class="R1-menu-header-pict"
-        />
+        /></h2>
       </header>
       <article class="R1-menu-carte">
         <div class="R1-menu-carte-title">
