--- a/Index.html
+++ b/Index.html
@@ -52,12 +52,7 @@
     </div>
     <header class="header">
       <div class="header_logo">
-        <a href="#">
-          <img
-            src="Maquettes_Ohmyfood/images/logo/ohmyfood.png"
-            alt=" logo Ohmyfood"
-            class="header_logo_pict"
-        /></a>
+        <h1>ohmyfood</h1>
       </div>
     </header>
     <section class="section_1">
