--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -35,11 +35,7 @@
       <div class="R1-header-b2">
         <a href="#">
           <span class="header_cont_logo">
-            <img
-              src="Maquettes_Ohmyfood/images/logo/ohmyfood.png"
-              alt=" logo Ohmyfood"
-              class="R1-header-b2-pict"
-            />
+            <h1>ohmyfood</h1>
           </span>
         </a>
       </div>
