--- a/A-la-Francaise.html
+++ b/A-la-Francaise.html
@@ -34,19 +34,19 @@
       </div>
       <div class="R1-header-b2">
         <a href="#">
-          <span class="header_cont_logo">
+          <div class="header_cont_logo">
             <h1>ohmyfood</h1>
-          </span>
+          </div>
         </a>
       </div>
     </header>
     <section class="R1-menu">
       <header class="R1-menu-header">
-        <img
+        <h2><img
           src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
           alt="restaurant Picture"
           class="R1-menu-header-pict"
-        />
+        /></h2>
       </header>
       <article class="R1-menu-carte">
         <div class="R1-menu-carte-title">
