--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -34,9 +34,9 @@
       </div>
       <div class="R1-header-b2">
         <a href="#">
-          <span class="header_cont_logo">
+          <div class="header_cont_logo">
             <h1>ohmyfood</h1>
-          </span>
+          </div>
         </a>
       </div>
     </header>
